Bumpe JDK version to 11.