@@ -238,10 +238,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.7.0</version>
+                <version>3.8.0</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>11</source>
+                    <target>11</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -306,9 +306,9 @@
             </build>
         </profile>
         <profile>
-            <id>java9</id>
+            <id>jigzaw</id>
             <activation>
-                <jdk>9</jdk>
+                <jdk>[9,)</jdk>
             </activation>
             <dependencies>
                 <dependency>
@@ -325,8 +325,7 @@
                             <artifactId>maven-compiler-plugin</artifactId>
                             <configuration>
                                 <compilerArgs>
-                                    <arg>-J--add-modules</arg>
-                                    <arg>-Jjava.xml.bind</arg>
+                                    <arg>--add-exports=java.base/sun.security.ssl=ALL-UNNAMED</arg>
                                 </compilerArgs>
                             </configuration>
                         </plugin>
@@ -334,7 +333,7 @@
                             <groupId>org.eclipse.jetty</groupId>
                             <artifactId>jetty-maven-plugin</artifactId>
                             <configuration>
-                                <jvmArgs>-Djava.security.properties=jvm/java.security --add-modules java.xml.bind</jvmArgs>
+                                <jvmArgs>-Djava.security.properties=jvm/java.security --add-modules java.base</jvmArgs>
                             </configuration>
                         </plugin>
                     </plugins>
